--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,16 @@ language: java
 jdk:
   - oraclejdk8
 
+services:
+  - mysql
+
 sudo: false
+
+before_install:
+  - mysql -e 'CREATE DATABASE adebar;'
+
+before_script:
+  - cp src/main/resources/application-travis.properties src/main/resources/application.properties
 
 cache:
   directories:
