--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ db/
 
 # Package Files #
 *.jar
+*.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
