--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,19 @@ before_install:
 before_script:
   - cp src/main/resources/application-travis.properties src/main/resources/application.properties
 
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
 cache:
   directories:
       - "$HOME/.m2"
+      - "$HOME/.sonar/cache"
+
+addons:
+  sonarcloud:
+    organization: "portux-github"
+    token:
+      secure: "adebar"
 
 notifications:
   slack:
