--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <name>NAJU Adebar</name>
+  <description>Management tool used by the NAJU Sachsen organization to keep track of volunteers and the like.</description>
+  <organization>
+    <name>NAJU Sachsen</name>
+    <url>http://naju-sachsen.de</url>
+  </organization>
 
   <properties>
     <java.version>1.8</java.version>
@@ -205,8 +210,4 @@
 
   </build>
 
-  <organization>
-    <name>NAJU Sachsen</name>
-    <url>http://naju-sachsen.de</url>
-  </organization>
 </project>
