--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,18 @@
 			<version>1.1</version>
 		</dependency>
 
+		<!-- App -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.6</version>
+		</dependency>
+
 		<!-- Web UI -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -186,11 +198,6 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
 	</dependencies>
