Track marketing opt outs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/adebar?verifyServerCertificate=false&useSSL=true
-spring.datasource.username = ar
-spring.datasource.password = *KBrvGL$W2Gq
+spring.datasource.url = jdbc:mysql://localhost:3306/adebar
+spring.datasource.username = adebar
+spring.datasource.password = adebar
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.use_sql_comments = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.type = trace
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 logging.level.de.naju = TRACE
-logging.file = adebar.log
+
 management.endpoints.web.exposure.include = *
 
-spring.mvc.favicon.enabled = false
+logging.file = adebar.log
