--- a/src/main/resources/startup.properties
+++ b/src/main/resources/startup.properties
@@ -1,5 +1,5 @@
-adebar.admin.username=admin
-adebar.admin.password=123
-adebar.admin.first-name=Admin
-adebar.admin.last-name=Nicht Löschen
-adebar.admin.email=admin@naju-sachsen.de
+adebar.admin.username=
+adebar.admin.password=
+adebar.admin.first-name=
+adebar.admin.last-name=
+adebar.admin.email=
