--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+	<packaging>jar</packaging>
+
 	<dependencies>
 
 		<!-- Spring Boot -->
